--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,14 @@
     <string name="cd_like">Like song</string>
     <string name="cd_queue">Show queue</string>
     <string name="cd_shuffle">Shuffle</string>
+
+    <string name="title_home">Home</string>
+    <string name="title_explore">Explore</string>
+    <string name="title_playlists">Playlists</string>
+    <string name="title_library">Library</string>
+
+    <string name="home_fragment_label">Home Fragment</string>
+    <string name="explore_fragment_label">Explore Fragment</string>
+    <string name="playlists_fragment_label">Playlists Fragment</string>
+    <string name="library_fragment_label">Library Fragment</string>
 </resources>
